<resources>
    <string name="app_name">ContactsBackup</string>

    <string name="btn_contacts">Contacts</string>
    <string name="btn_raw_contacts">Raw Contacts</string>

    <string name="id">_ID</string>
    <string name="contact_id">Contact ID</string>
    <string name="account_name">Account name</string>
    <string name="account_type">Account type</string>
    <string name="ringtone">Ringtone</string>

    <string name="family">Family</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="restore">Restore</string>

    <string-array name="struct_name_fields">
        <item>Name</item>
        <item>First name</item>
        <item>Second name</item>
    </string-array>
    <string-array name="phone_fields">
        <item>Number</item>
        <item>Label</item>
        <item>Type</item>
    </string-array>
    <string-array name="email_fields">
        <item>Address</item>
        <item>Name</item>
    </string-array>


    <string name="contact_name">Contact name</string>

</resources>
