<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ru.ivadimn.contactsbackup.activities.RestoreActivity">
    <EditText
        android:id="@+id/ed_given_id"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_margin"
        android:layout_marginTop="@dimen/view_margin"
        android:background="@color/colorEditBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
         />
    <TextView
        android:id="@+id/tv_titlegiven_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ed_given_id"
        />

    <EditText
        android:id="@+id/ed_family_id"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_margin"
        android:layout_marginTop="@dimen/view_margin"
        android:background="@color/colorEditBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_given_id"
        />
    <TextView
        android:id="@+id/tv_titlefamily_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/family"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ed_family_id"
        />

    <EditText
        android:id="@+id/ed_phone1_id"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_margin"
        android:layout_marginTop="@dimen/view_margin"
        android:background="@color/colorEditBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_family_id"
        />
    <TextView
        android:id="@+id/tv_titlephone1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ed_phone1_id"
        />

    <EditText
        android:id="@+id/ed_phone2_id"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_margin"
        android:layout_marginTop="@dimen/view_margin"
        android:background="@color/colorEditBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_phone1_id"
        />
    <TextView
        android:id="@+id/tv_titlephone2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ed_phone2_id"
        />

    <EditText
        android:id="@+id/ed_email1_id"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_margin"
        android:layout_marginTop="@dimen/view_margin"
        android:background="@color/colorEditBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_phone2_id"
        />
    <TextView
        android:id="@+id/tv_titleemail1_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ed_email1_id"
        />

    <EditText
        android:id="@+id/ed_email2_id"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edit_margin"
        android:layout_marginTop="@dimen/view_margin"
        android:background="@color/colorEditBackground"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ed_email1_id"
        />
    <TextView
        android:id="@+id/tv_titleemail2_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/ed_email2_id"
        />

    <Button
        android:id="@+id/btn_restore_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/restore"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:onClick="restore"
        />

</android.support.constraint.ConstraintLayout>
